<resources>
    <string name="app_name">CarrosMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="agregar">AGREGAR</string>
    <string name="placa">Placa</string>
    <string name="precio">Precio</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="blanco">Blanco</string>
    <string name="negro">Negro</string>
    <string name="azul">Azul</string>
    <string name="rojo">Rojo</string>
    <string name="gris">Gris</string>
    <string name="chevrolet">Chevrolet</string>
    <string name="renault">Renault</string>
    <string name="mazda">Mazda</string>
    <string name="nissan">Nissan</string>
    <string name="toyota">Toyota</string>
    <string name="mensaje_guardado">Persona guardada exitosamente</string>

    <string-array name="color">
        <item></item>
        <item>@string/blanco</item>
        <item>@string/negro</item>
        <item>@string/azul</item>
        <item>@string/rojo</item>
        <item>@string/gris</item>
    </string-array>

    <string-array name="marca">
        <item></item>
        <item>@string/chevrolet</item>
        <item>@string/mazda</item>
        <item>@string/nissan</item>
        <item>@string/renault</item>
        <item>@string/toyota</item>
    </string-array>
</resources>
